--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wkdwowns100.github.io/easyLoA",
+  "homepage": "https://wkdwowns100.github.io/project1_easyLoa",
   "name": "project1",
   "version": "0.1.0",
   "private": true,
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build -r https://wkdwowns100.github.io/easyLoA"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
